--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,33 +5,13 @@
 <head>
 <script type="text/javascript">
 var siteconfig = {
-		"track": "//localhost:8000",
-		"ws":	 "//localhost:8000",
-		"report":"//localhost:8050"
+		   "track":  "//localhost:<%= config.tracker_http_port %>",
+		   "report": "//localhost:<%= config.dashboard_port %>",
+		   "ws": "//localhost:<%= config.dashboard_port %>",
                  };
-WEB_SOCKET_SWF_LOCATION = siteconfig.track + '/socket.io/WebSocketMain.swf';
+WEB_SOCKET_SWF_LOCATION = siteconfig.report + '/socket.io/WebSocketMain.swf';
 </script>
-  <script src="js/config.js" type="text/javascript"></script>
-  <script src="js/jquery-1.5.1.min.js"></script>
-  <script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
 
-  <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="js/flot/excanvas.min.js"></script><![endif]-->
-  <script language="javascript" type="text/javascript" src="js/flot/jquery.flot.js"></script>
-  <script language="javascript" type="text/javascript" src="js/aggregates.js"></script>
-
-  <script src="http://localhost:8000/socket.io/socket.io.js"></script>
-
-  <script src="js/helpers.js"></script>
-
-  <script src="js/websocket.js"></script>
-  <script src="js/polymaps.js"></script>
-  <script src="js/weekly.js"></script>
-
-  <script src="js/widgets/base.js"></script>
-  <script src="js/widgets/logger.js"></script>
-  <script src="js/widgets/graph.js"></script>
-  <script src="js/widgets/count.js"></script>
-  <script src="js/widgets/map.js"></script>
 
   <title>HummingBird</title>
 
@@ -42,6 +22,7 @@ WEB_SOCKET_SWF_LOCATION = siteconfig.track + '/socket.io/WebSocketMain.swf';
   <link rel="stylesheet" media="all" href="css/map.css" />
   <link rel="stylesheet" media="all" href="css/weekly.css" />
   <link rel="stylesheet" media="all" href="css/header.css" />
+
 </head>
 
 <body>
@@ -163,6 +144,28 @@ WEB_SOCKET_SWF_LOCATION = siteconfig.track + '/socket.io/WebSocketMain.swf';
 
   </div>
 
+
+  <script src="js/jquery-1.5.1.min.js"></script>
+  <script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
+
+  <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="js/flot/excanvas.min.js"></script><![endif]-->
+  <script language="javascript" type="text/javascript" src="js/flot/jquery.flot.js"></script>
+  <script language="javascript" type="text/javascript" src="js/aggregates.js"></script>
+
+  <script src="http://localhost:<%= config.dashboard_port %>/socket.io/socket.io.js"></script>
+
+  <script src="js/helpers.js"></script>
+
+  <script src="js/websocket.js"></script>
+  <script src="js/polymaps.js"></script>
+  <script src="js/weekly.js"></script>
+
+  <script src="js/widgets/base.js"></script>
+  <script src="js/widgets/logger.js"></script>
+  <script src="js/widgets/graph.js"></script>
+  <script src="js/widgets/count.js"></script>
+  <script src="js/widgets/map.js"></script>
+
   <script>
     $(document).ready(function() {
       $('#tabs').tabs();
@@ -220,8 +223,5 @@ WEB_SOCKET_SWF_LOCATION = siteconfig.track + '/socket.io/WebSocketMain.swf';
 
     });
   </script>
-
-  
-
 </body>
 </html>
